# src/routes/router.js
@@ -1,0 +1,8 @@
+import { Router } from 'express';
+import driverRouter from '../driver/router';
+const router = Router();
+
+router.use('/driver', driverRouter);
+
+
+export default { router };
