# swagger.yaml
@@ -8,7 +8,7 @@ servers:
   - url: http://localhost:5000
 
 paths:
-  /admin/alldrivers:
+  /driver/all:
     get:
       summary: Get all drivers
       tags:
@@ -23,7 +23,7 @@ paths:
                 items:
                   $ref: '#/components/schemas/Driver'
 
-  /admin/newdriver:
+  /driver/:
     post:
       summary: Create a new driver
       tags:
@@ -56,7 +56,7 @@ paths:
                   error:
                     type: string
 
-  /admin/driver/{id}:
+  /driver/{id}:
     get:
       summary: Get a driver by ID
       tags:
@@ -156,3 +156,7 @@ components:
         licenseNumber:
           type: string
           example: "AB123456"
+        username:
+          type: string
+        password:
+          type: string
